<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context="coms.example.daman.accelerometer.MainActivity">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string1"
                android:textSize="18sp"
                android:textStyle="bold"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/x_axis"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/x"
                        android:textSize="16sp"
                        android:paddingRight="8sp"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:id="@+id/x_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignRight="@id/x_axis"
                        android:text = "0"
                        android:textSize="16sp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/unit"
                        android:textSize="16sp"
                        android:paddingLeft="4dp"/>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_below="@id/x_axis"
                        android:id="@+id/y_axis"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/y"
                        android:textSize="16sp"
                        android:paddingRight="8sp"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:id = "@+id/y_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textSize="16sp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/unit"
                        android:textSize="16sp"
                        android:paddingLeft="4dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/z_axis"
                        android:layout_below="@id/y_axis"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/z"
                        android:textSize="16sp"
                        android:paddingRight="8sp"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:id = "@+id/z_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textSize="16sp"
                        android:paddingBottom="8dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/unit"
                        android:textSize="16sp"
                        android:paddingLeft="4dp"/>
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                />

            <Button
                android:id="@+id/button1"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:onClick="onButtonClick"
                android:text="@string/string4"
                android:paddingTop="8dp"
                />


        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string3"
                android:textSize="18sp"
                android:textStyle="bold"
                />
        </LinearLayout>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/x_axis_noG"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/x"
                        android:textSize="16sp"
                        android:paddingRight="8sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/x_value_noG"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text = "0"
                        android:textSize="16sp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/unit"
                        android:textSize="16sp"
                        android:paddingLeft="4dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_below="@id/x_axis_noG"
                        android:id="@+id/y_axis_noG"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/y"
                        android:textSize="16sp"
                        android:paddingRight="8sp"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:id = "@+id/y_value_noG"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textSize="16sp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/unit"
                        android:textSize="16sp"
                        android:paddingLeft="4dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/z_axis_noG"
                        android:layout_below="@id/y_axis_noG"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/z"
                        android:textSize="16sp"
                        android:paddingRight="8sp"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:id = "@+id/z_value_noG"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textSize="16sp"
                        android:paddingBottom="8dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/unit"
                        android:textSize="16sp"
                        android:paddingLeft="4dp"/>
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                />

            <Button
                android:id="@+id/button2"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:onClick="onButtonClick"
                android:text="@string/string4"
                android:paddingTop="8dp"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string2"
                android:textSize="18sp"
                android:textStyle="bold"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/x_axis_G"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/x"
                        android:textSize="16sp"
                        android:paddingRight="8sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/x_value_G"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignRight="@id/x_axis"
                        android:text = "0"
                        android:textSize="16sp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/unit"
                        android:textSize="16sp"
                        android:paddingLeft="4dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_below="@id/x_axis_G"
                        android:id="@+id/y_axis_G"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/y"
                        android:textSize="16sp"
                        android:paddingRight="8sp"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:id = "@+id/y_value_G"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textSize="16sp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/unit"
                        android:textSize="16sp"
                        android:paddingLeft="4dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/z_axis_G"
                        android:layout_below="@id/y_axis_G"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/z"
                        android:textSize="16sp"
                        android:paddingRight="8sp"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:id = "@+id/z_value_G"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textSize="16sp"
                        android:paddingBottom="8dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/unit"
                        android:textSize="16sp"
                        android:paddingLeft="4dp"/>
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                />

            <Button
                android:id="@+id/button3"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:onClick="onButtonClick"
                android:text="@string/string4"
                android:paddingTop="8dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/Orientation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="12dp"
                android:text = "Orientation : "
                android:textSize="16sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/Orientation_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = ""
                android:textSize="16sp"/>
        </LinearLayout>
        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingTop="12dp"
            android:paddingBottom="8dp"/>
        <TextView
            android:id="@+id/test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" "
            android:textSize="16sp"/>
    </LinearLayout>
</ScrollView>
